hphp/test/quick/method-undefined.php.expectf

Fatal error: Call to undefined method c::foo from anonymous context in %s on line 8
